@@ -54,16 +54,17 @@ AR.Lang.Unit = {}
 AR.Lang.Unit.Alltha = KBM.Language:Add(AR.Alltha.Name)
 AR.Lang.Unit.Alltha:SetGerman("Alltha die Schnitterin")
 AR.Lang.Unit.Alltha:SetFrench("Alltha la Faucheuse")
+AR.Lang.Unit.Alltha:SetRussian("Алльта Потрошительница")
 AR.Lang.Unit.AllthaShort = KBM.Language:Add("Alltha")
 AR.Lang.Unit.AllthaShort:SetGerman("Alltha")
 AR.Lang.Unit.AllthaShort:SetFrench("Alltha")
-
+AR.Lang.Unit.AllthaShort:SetRussian("Алльта")
 -- Debuff Dictionary
 AR.Lang.Debuff = {}
 AR.Lang.Debuff.Spore = KBM.Language:Add("Toxic Spore")
 AR.Lang.Debuff.Spore:SetFrench("Spore toxique")
 AR.Lang.Debuff.Spore:SetGerman("Giftige Spore")
-
+AR.Lang.Debuff.Spore:SetRussian("Ядовитая спора")
 AR.Alltha.Name = AR.Lang.Unit.Alltha[KBM.Lang]
 AR.Alltha.NameShort = AR.Lang.Unit.AllthaShort[KBM.Lang]
 AR.Descript = AR.Alltha.Name
